--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Logotipo</h1>
     <img src="img/unnamed.png" alt="Logotipo Git">
 </body>
 </html>
